[gd_scene load_steps=32 format=3 uid="uid://d0ef6ooao23eh"]

[ext_resource type="Script" uid="uid://c066uqel8nsfw" path="res://scripts/Entities/player_copy.gd" id="1_ugwka"]
[ext_resource type="Texture2D" uid="uid://cg8jrpjmngi0y" path="res://Assets/sprites/Player - Sprite sheet.png" id="3_ypvnm"]
[ext_resource type="PackedScene" uid="uid://whdgu748wqwy" path="res://Components/graber.tscn" id="6_v2mfr"]
[ext_resource type="PackedScene" uid="uid://ch8sgooa863fd" path="res://Components/interactor.tscn" id="7_ypvnm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("3_ypvnm")
region = Rect2(288, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("3_ypvnm")
region = Rect2(304, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("3_ypvnm")
region = Rect2(320, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6s4"]
atlas = ExtResource("3_ypvnm")
region = Rect2(336, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7tu"]
atlas = ExtResource("3_ypvnm")
region = Rect2(352, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("3_ypvnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("3_ypvnm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("3_ypvnm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("3_ypvnm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_evlff"]
atlas = ExtResource("3_ypvnm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7db53"]
atlas = ExtResource("3_ypvnm")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("3_ypvnm")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plaij"]
atlas = ExtResource("3_ypvnm")
region = Rect2(240, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib8tg"]
atlas = ExtResource("3_ypvnm")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcwxb"]
atlas = ExtResource("3_ypvnm")
region = Rect2(272, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("3_ypvnm")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2i2q"]
atlas = ExtResource("3_ypvnm")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdqif"]
atlas = ExtResource("3_ypvnm")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_egchw"]
atlas = ExtResource("3_ypvnm")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykqge"]
atlas = ExtResource("3_ypvnm")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn2x3"]
atlas = ExtResource("3_ypvnm")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y10x8"]
atlas = ExtResource("3_ypvnm")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sc42"]
atlas = ExtResource("3_ypvnm")
region = Rect2(208, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0i8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w6s4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb7tu")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evlff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7db53")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plaij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib8tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcwxb")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2i2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdqif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egchw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykqge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn2x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y10x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sc42")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ugwka"]
radius = 4.0
height = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugwka"]
size = Vector2(6, 3.474999)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qwxa"]
size = Vector2(14.5, 16)

[node name="PlayerCopy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_ugwka")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5019608)
sprite_frames = SubResource("SpriteFrames_q0i8f")
animation = &"walk"
frame_progress = 0.23569395

[node name="CollisionDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ugwka")

[node name="FloorDetector" type="Area2D" parent="."]
position = Vector2(0, 8.8)
collision_layer = 0
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
position = Vector2(0, 0.46250057)
shape = SubResource("RectangleShape2D_ugwka")

[node name="Graber" parent="." node_paths=PackedStringArray("big_object_position", "small_object_position", "drop_object_position", "graber_object") instance=ExtResource("6_v2mfr")]
big_object_position = NodePath("BigHoldingSpot")
small_object_position = NodePath("SmallHoldingSpot")
drop_object_position = NodePath("DropSpot")
graber_object = NodePath("..")

[node name="CollisionShape2D" parent="Graber" index="0"]
position = Vector2(4.5, -1.65625)

[node name="SmallHoldingSpot" type="Marker2D" parent="Graber"]
position = Vector2(7, 2)

[node name="BigHoldingSpot" type="Marker2D" parent="Graber"]
position = Vector2(0, -8.2)

[node name="DropSpot" type="Marker2D" parent="Graber"]
position = Vector2(8, 6)

[node name="Interactor" parent="." instance=ExtResource("7_ypvnm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactor"]
position = Vector2(0.25, 0)
shape = SubResource("RectangleShape2D_6qwxa")

[connection signal="body_entered" from="CollisionDetector" to="." method="_on_collision_detector_body_entered"]

[editable path="Graber"]
